<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.json.placeholder.ui.login.LoginViewModel"/>
        <variable
            name="viewModel"
            type="LoginViewModel"/>

        <variable
            name="enableLogin"
            type="Boolean"/>

        <import type="java.util.Locale"/>
        <variable
            name="localeCode"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@{localeCode == Locale.ENGLISH.language ? @drawable/ic_en_flag : @drawable/ic_china_flag, default = @drawable/ic_en_flag}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.source.module.custom.CircleImageView
            android:layout_width="@dimen/margin_48dp"
            android:layout_height="@dimen/margin_48dp"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_laos"
            app:layout_constraintBottom_toTopOf="@+id/iv_logo"
            app:layout_constraintEnd_toStartOf="@+id/iv_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60dp"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                android:contentDescription="@string/desc_email"
                android:src="@drawable/ic_email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/textInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_email"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/user_email"
                    android:text="@={viewModel.loginRequest.email}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/layout_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_password"
                android:contentDescription="@string/desc_email"
                android:src="@drawable/ic_password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                style="@style/textInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.loginRequest.password}"/>

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/appCompatButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:enabled="@{enableLogin}"
            android:onClick="@{() -> viewModel.onLoginClick()}"
            android:text="@string/user_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>